--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "knex": "^3.1.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.3"
   }
 }
